# adicts

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: adicts-cicd.yaml
adicts/: __init__.py  functions.py
tests/: test_adicts.py
