[project]
name = "adicts"
version = "1"
description = "(a)rithmetic operations for (dict)ionaries"
authors = [{ name = "William Norland"}]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/willayy/adict"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
